Fix Dark Mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,7 +46,7 @@
 body {
   font-size: 17px;
   line-height: 1.75;
-  color: #1a1a1a;
+  /*color: #1a1a1a;*/
   background-color: var(--bg-color);
   color: var(--text-color);
   transition: background-color 0.25s ease, color 0.25s ease;
